# AI-Scientific-Reviewer-System-v2

./: .gitignore  README.md  START_AI_REVIEWER.cmd  START_GUI.hta  START_HERE.cmd  pyproject.toml  requirements.txt  run_cli.ps1  run_web.ps1  server_log.txt
docs/: OJS_INTEGRATION.md
src/ai_scientific_reviewer/: __init__.py  cli.py  crossref.py  extract.py  graph.py  ingest_docx.py  reporting.py  types.py  ui_streamlit.py  web_app.py
src/ai_scientific_reviewer/agents/: __init__.py  abstract_agent.py  doi_agent.py  editorial_screening_agent.py  imrad_agent.py  reference_agent.py  reviewer_report_agent.py
src/ai_scientific_reviewer/templates/: report.html.j2
src/ai_scientific_reviewer_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
